@@ -1,6 +1,6 @@
 ;;; bbdb-pgp.el --- use BBDB to handle PGP preferences -*- lexical-binding: t -*-
 
-;; Copyright (C) 2013-2017  Free Software Foundation, Inc.
+;; Copyright (C) 2013-2022  Free Software Foundation, Inc.
 
 ;; This file is part of the Insidious Big Brother Database (aka BBDB),
 
