@@ -1,3 +1,7 @@
+2022-02-10  Roland Winkler  <winkler@gnu.org>
+	Update copyright.  Quieten compiler.
+	* lisp/bbdb.el: Require cl-lib.
+
 2021-01-07  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-sc.el: Add third arg to define-obsolete-variable-alias
 	and define-obsolete-function-alias.
